compiler/e2e/test/snapshot/bootstrap/using/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: the using statement conflicts with an existing name in the module
   ╭─ bootstrap/using/main.pnx:2:8
   │
 2 │ import main::First
   │        ^^^^^^^^^^^ the using `First` conflicts with the existing name in the module `main`
   ·
31 │ public struct First:
   │               ----- this symbol already defined the name `First`

error: the using statement conflicts with an existing name in the module
  ╭─ bootstrap/using/main.pnx:6:8
  │
5 │ import main::inner1::Inner
  │        ------------------- this symbol already defined the name `Inner`
6 │ import main::inner2::Inner
  │        ^^^^^^^^^^^^^^^^^^^ the using `Inner` conflicts with the existing name in the module `main`

error: the symbol is not accessible
  ╭─ bootstrap/using/main.pnx:9:22
  │
9 │ import main::inner3::InAccessible
  │                      ^^^^^^^^^^^^ the symbol `main::inner3::InAccessible` is not accessible from `main`

error: import items that have a `from` clause cannot have the `target` as the root path
   ╭─ bootstrap/using/main.pnx:12:26
   │
12 │ from main::inner4 import target::invalidOne, target::invalidTwo
   │                          ^^^^^^ the `target` root path is not allowed with `from` clause

error: import items that have a `from` clause cannot have the `target` as the root path
   ╭─ bootstrap/using/main.pnx:12:46
   │
12 │ from main::inner4 import target::invalidOne, target::invalidTwo
   │                                              ^^^^^^ the `target` root path is not allowed with `from` clause

error: the using statement conflicts with an existing name in the module
   ╭─ bootstrap/using/main.pnx:17:16
   │  
14 │   from main::inner4 import (
   │ ╭──────────────────────────'
15 │ │     InnerFirst,
   │ ╰──────────────' this symbol already defined the name `InnerFirst`
16 │       InnerSecond,
17 │       InnerThird as InnerFirst # cause conflict 
   │                  ^^^^^^^^^^^^^ the using `InnerFirst` conflicts with the existing name in the module `main`

error: the symbol could not be found
   ╭─ bootstrap/using/main.pnx:21:8
   │
21 │ import unknown
   │        ^^^^^^^ the target named `unknown` is not found

error: the symbol could not be found
   ╭─ bootstrap/using/main.pnx:22:14
   │
22 │ import main::unknown
   │              ^^^^^^^ the symbol named `unknown` does not exist in `main`



stdout:
